# migra

./: .env.sample  .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  rust.yml
migra/: Cargo.toml  README.md
migra-cli/: Cargo.toml
migra-cli/src/: app.rs  config.rs  database.rs  error.rs  main.rs  migration.rs  opts.rs  path.rs
migra-cli/src/commands/: apply.rs  downgrade.rs  init.rs  list.rs  make.rs  upgrade.rs
migra-cli/src/database/: adapter.rs  builder.rs  connection.rs  migration.rs  mod.rs  transaction.rs
migra-cli/src/database/clients/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
migra-cli/src/databases/: mod.rs  postgres.rs
migra-cli/tests/: commands.rs  init.rs  list.rs
migra-cli/tests/common/: mod.rs
migra-cli/tests/data/: Migra_env.toml  Migra_env_empty.toml  Migra_mysql_invalid.toml  Migra_postgres_invalid.toml  Migra_url.toml  Migra_url_empty.toml
migra-cli/tests/data/migrations/210218232851_create_articles/: up.sql
migra-cli/tests/data/mysql_invalid/migrations/210218233414_create_persons/: down.sql  up.sql
migra-cli/tests/data/postgres_invalid/migrations/210218233414_create_persons/: up.sql
migra-cli/tests/data/sqlite_invalid/migrations/210218233414_create_persons/: down.sql
migra-core/: Cargo.toml
migra-core/src/: database.rs  lib.rs  path.rs
migra/src/: error.rs  errors.rs  fs.rs  lib.rs  managers.rs  migration.rs
migra/src/clients/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
migra_cli/: Cargo.toml
migra_cli/src/: app.rs  client.rs  config.rs  database.rs  error.rs  main.rs  opts.rs
migra_cli/src/commands/: apply.rs  downgrade.rs  init.rs  list.rs  make.rs  mod.rs  upgrade.rs
migra_cli/src/database/: migration.rs  mod.rs  transaction.rs
migra_cli/tests/: commands.rs
migra_cli/tests/data/: Migra_mysql.toml  Migra_postgres.toml  Migra_sqlite.toml  Migra_sqlite_invalid.toml  Migra_url_empty.toml
migra_cli/tests/data/mysql/migrations/210218232851_create_articles/: down.sql
migra_cli/tests/data/mysql/migrations/210218233414_create_persons/: up.sql
migra_cli/tests/data/postgres/migrations/210218233414_create_persons/: up.sql
migra_cli/tests/data/sqlite/migrations/210218232851_create_articles/: up.sql
migra_cli/tests/data/sqlite_invalid/migrations/210218233414_create_persons/: up.sql
migra_clients/: Cargo.toml
migra_clients/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
sample/: Migra.toml
sample/database/: schema.sql
sample/database/migrations/210206002058_create_tag/: up.sql
