[package]
name = "migra-cli"
version = "0.2.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"
description = "Simple SQL migration manager for your project"
homepage = "https://github.com/pleshevskiy/migra"
repository = "https://github.com/pleshevskiy/migra"
license = "MIT OR Apache-2.0"
keywords = ["migration", "cli", "sql", "manager"]
categories = ["accessibility", "database", "command-line-interface"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "migra"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/commands.rs"

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
chrono = "0.4"
postgres = "0.19"
dotenv = { version = "0.15", optional = true }

[dev-dependencies]
assert_cmd = "1"
predicates = "1"

[features]
default = []
