[package]
name = "migra-cli"
version = "0.5.0"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"
description = "Simple SQL migration manager for your project"
homepage = "https://github.com/pleshevskiy/migra"
repository = "https://github.com/pleshevskiy/migra"
license = "MIT OR Apache-2.0"
keywords = ["migration", "cli", "sql", "manager"]
categories = ["accessibility", "database", "command-line-interface"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["postgres"]
postgres = ["migra/postgres"]
sqlite = ["migra/sqlite"]
mysql = ["migra/mysql"]

[dependencies]
migra = { version = "0", path = "../migra" }
cfg-if = "1.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
chrono = "0.4"
dotenv = { version = "0.15", optional = true }

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "migra"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/commands.rs"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
